fix z-index on tipsy

--- a/client/play/css/main.scss
+++ b/client/play/css/main.scss
@@ -128,6 +128,9 @@
   margin-left: 50px;
 }
 
+.tipsy {
+  z-index: 3000;
+}
 .ui-dialog {
   z-index: 5000 !important;
 }
